# PGG-Archon-AGI

./: .env.example  .gitignore  AGENTS.md  Dockerfile  cli-config.yaml.example  cli.py  hermes_state.py  mcp_serve.py  model_tools.py  package-lock.json  package.json  pyproject.toml  run_agent.py  setup-hermes.sh  toolsets.py  utils.py
gateway/: run.py  (+4 more)
rust_modules/: .gitignore  Cargo.toml  build_and_install.sh
rust_modules/.cargo/: config.toml
rust_modules/hermes_pgg_actpath_intake/: Cargo.toml
rust_modules/hermes_pgg_actpath_intake/src/: lib.rs
rust_modules/hermes_pgg_apex_delta_e_gate/: Cargo.toml
rust_modules/hermes_pgg_apex_delta_e_gate/src/: lib.rs
rust_modules/hermes_pgg_apex_dynamic_score/: Cargo.toml
rust_modules/hermes_pgg_apex_dynamic_score/src/: lib.rs
rust_modules/hermes_pgg_archon_utils/: Cargo.toml
rust_modules/hermes_pgg_archon_utils/src/: lib.rs
rust_modules/hermes_pgg_autonomy_core/: Cargo.toml
rust_modules/hermes_pgg_autonomy_core/src/: lib.rs
rust_modules/hermes_pgg_bridge_review/: Cargo.toml
rust_modules/hermes_pgg_bridge_review/src/: lib.rs
rust_modules/hermes_pgg_cmmi_industrial_gate/: Cargo.toml
rust_modules/hermes_pgg_cmmi_industrial_gate/src/: lib.rs
rust_modules/hermes_pgg_codegenesis_scanner/: Cargo.toml
rust_modules/hermes_pgg_codegenesis_scanner/src/: lib.rs
rust_modules/hermes_pgg_ecc/: Cargo.toml
rust_modules/hermes_pgg_ecc/src/: lib.rs
rust_modules/hermes_pgg_evm_runtime_gate/: Cargo.toml
rust_modules/hermes_pgg_evomaster_gate/: Cargo.toml
rust_modules/hermes_pgg_gene_fusion/: Cargo.toml
rust_modules/hermes_pgg_gene_scoring/: Cargo.toml
rust_modules/hermes_pgg_health_monitor/: Cargo.toml
rust_modules/hermes_pgg_l5_self_fix/: Cargo.toml
rust_modules/hermes_pgg_mini_benchmark/: Cargo.toml
rust_modules/hermes_pgg_omniroute/: Cargo.toml
rust_modules/hermes_pgg_overlay/: Cargo.toml
rust_modules/hermes_pgg_picoapex_saturation/: Cargo.toml
rust_modules/hermes_pgg_pilotdeck/: Cargo.toml
rust_modules/hermes_pgg_promptfoo_gate/: Cargo.toml
rust_modules/hermes_pgg_ralph/: Cargo.toml
rust_modules/hermes_pgg_schema_validator/: Cargo.toml
rust_modules/hermes_pgg_security_policy_surface/: Cargo.toml
rust_modules/hermes_pgg_self_evolution_core/: Cargo.toml
rust_modules/hermes_pgg_skill_health_checker/: Cargo.toml
rust_modules/hermes_pgg_status/: Cargo.toml
rust_modules/hermes_pgg_super_agi_formula/: Cargo.toml
rust_modules/hermes_pgg_ultimate_formula/: Cargo.toml
rust_modules/pgg_actor_critic_review_gate/: Cargo.toml
rust_modules/pgg_batch_proof_metabolism_runner/: Cargo.toml
rust_modules/pgg_capability_tree_gate/: Cargo.toml
rust_modules/pgg_case_free_evolution_runner/: Cargo.toml
rust_modules/pgg_cc_cybernetics_absorption_gate/: Cargo.toml
rust_modules/pgg_cms_case_guard/: Cargo.toml
rust_modules/pgg_control_curriculum_eval_gate/: Cargo.toml
rust_modules/pgg_control_loop_trace_gate/: Cargo.toml
rust_modules/pgg_curve_collector/: Cargo.toml
rust_modules/pgg_daa_governance_gate/: Cargo.toml
rust_modules/pgg_daily_learning_runner/: Cargo.toml
rust_modules/pgg_debt_ledger_runner/: Cargo.toml
rust_modules/pgg_durable_task_object_gate/: Cargo.toml
rust_modules/pgg_email_sync_governance_gate/: Cargo.toml
rust_modules/pgg_email_sync_runner/: Cargo.toml
rust_modules/pgg_engineering_discipline_gate/: Cargo.toml
rust_modules/pgg_eval_gate/: Cargo.toml
rust_modules/pgg_feishu_learning_batch_gate/: Cargo.toml
rust_modules/pgg_feishu_ops_triptych_gate/: Cargo.toml
rust_modules/pgg_fusion_auto_closer/: Cargo.toml
rust_modules/pgg_fusion_session_consumer/: Cargo.toml
rust_modules/pgg_gene_intake_pipeline/: Cargo.toml
rust_modules/pgg_gene_intake_runner/: Cargo.toml
rust_modules/pgg_genedb_unified_audit/: Cargo.toml
rust_modules/pgg_health_monitor_light_runner/: Cargo.toml
rust_modules/pgg_heartbeat_alert_delivery_gate/: Cargo.toml
rust_modules/pgg_heartbeat_alert_summarizer/: Cargo.toml
rust_modules/pgg_heartbeat_candidate_executor_preflight/: Cargo.toml
rust_modules/pgg_heartbeat_candidate_prioritizer/: Cargo.toml
rust_modules/pgg_heartbeat_capability_gap_probe/: Cargo.toml
rust_modules/pgg_heartbeat_evolution_planner/: Cargo.toml
rust_modules/pgg_heartbeat_gap_action_router/: Cargo.toml
rust_modules/pgg_heartbeat_light_runner/: Cargo.toml
rust_modules/pgg_heartbeat_mapping_gate/: Cargo.toml
rust_modules/pgg_heartbeat_plan_rotation_runner/: Cargo.toml
rust_modules/pgg_heartbeat_recommendation_candidate_gate/: Cargo.toml
rust_modules/pgg_heartbeat_replay_ledger_gate/: Cargo.toml
rust_modules/pgg_hermes_venv_guard/: Cargo.toml
rust_modules/pgg_launchd_omnibus/: Cargo.toml
rust_modules/pgg_legal_multiagent_ops_gate/: Cargo.toml
rust_modules/pgg_legal_ops_observer/: Cargo.toml
rust_modules/pgg_legal_receipt_executor/: Cargo.toml
rust_modules/pgg_legal_receipt_queue/: Cargo.toml
rust_modules/pgg_legal_receipt_template_pack/: Cargo.toml
rust_modules/pgg_memory_stability_report/: Cargo.toml
rust_modules/pgg_neuron_autoevolve_guard/: Cargo.toml
rust_modules/pgg_ops_lifecycle_gate/: Cargo.toml
rust_modules/pgg_prd_quality_gate/: Cargo.toml
rust_modules/pgg_project_session_settle/: Cargo.toml
rust_modules/pgg_provider_cost_profile/: Cargo.toml  ai.hermes.pgg-omniroute-sidecar-gateway.plist
rust_modules/pgg_provider_health_check/: Cargo.toml
rust_modules/pgg_python_module_runner/: Cargo.toml
rust_modules/pgg_query_complexity_gate/: Cargo.toml
rust_modules/pgg_report_quality_gate/: Cargo.toml
rust_modules/pgg_retrospective_injector/: Cargo.toml
rust_modules/pgg_self_evolution_runner/: Cargo.toml
rust_modules/pgg_self_evolution_security_risk_gate/: Cargo.toml
rust_modules/pgg_skillflow_p9_watchdog_runner/: Cargo.toml
rust_modules/pgg_skillflow_watchdog/: Cargo.toml
rust_modules/pgg_sourceref_repair_runner/: Cargo.toml
rust_modules/pgg_task_cognitive_preflight_gate/: Cargo.toml
rust_modules/pgg_token_cost_governance_status/: Cargo.toml
rust_modules/pgg_workspace_candidate_report/: Cargo.toml
(+1603 files in other folders)
