[workspace]
resolver = "2"
members = [
    "hermes_pgg_actpath_intake",
    "hermes_pgg_autonomy_core",
    "hermes_pgg_bridge_review",
    "hermes_pgg_cmmi_industrial_gate",
    "hermes_pgg_evm_runtime_gate", "hermes_pgg_gene_fusion",
    "hermes_pgg_health_monitor",
    "hermes_pgg_gene_scoring",
    "hermes_pgg_mini_benchmark",
    "pgg_batch_proof_metabolism_runner",
    "pgg_sourceref_repair_runner",
    "pgg_daily_learning_runner",
    "pgg_gene_intake_runner",
    "pgg_python_module_runner",
    "pgg_self_evolution_runner",
    "pgg_skillflow_p9_watchdog_runner",
]
