[workspace]
resolver = "2"
members = [
    "hermes_pgg_picoapex_saturation",
    "hermes_pgg_self_evolution_core",
    "hermes_pgg_skill_health_checker",
    "hermes_pgg_schema_validator",
    "pgg_sourceref_repair_runner",
    "hermes_pgg_security_policy_surface",
    "hermes_pgg_codegenesis_scanner",
    "pgg_gene_intake_pipeline",
    "pgg_genedb_unified_audit",
    "hermes_pgg_archon_utils",
    "hermes_pgg_ultimate_formula",
    "hermes_pgg_super_agi_formula",
    "hermes_pgg_l5_self_fix",
    "hermes_pgg_cmmi_industrial_gate",
    "pgg_provider_health_check",
    "pgg_curve_collector",
    "pgg_skillflow_watchdog",
    "pgg_query_complexity_gate",
    "pgg_provider_cost_profile",
    "pgg_cms_case_guard",
    "pgg_eval_gate",
    "pgg_case_free_evolution_runner",
    "hermes_pgg_apex_dynamic_score",
    "pgg_retrospective_injector",
    "pgg_prd_quality_gate",
    "pgg_engineering_discipline_gate",
    "pgg_report_quality_gate",
    "pgg_capability_tree_gate",
    "pgg_daa_governance_gate",
    "pgg_legal_multiagent_ops_gate",
    "pgg_legal_ops_observer",
    "pgg_legal_receipt_queue",
    "pgg_legal_receipt_template_pack",
    "pgg_legal_receipt_executor",
    "pgg_self_evolution_security_risk_gate",
    "pgg_email_sync_governance_gate",
    "pgg_email_sync_runner",
    "pgg_feishu_ops_triptych_gate",
    "pgg_workspace_candidate_report",
    "pgg_memory_stability_report",
    "pgg_ops_lifecycle_gate",
    "pgg_feishu_learning_batch_gate",
    "pgg_cc_cybernetics_absorption_gate",
    "pgg_control_loop_trace_gate",
    "pgg_durable_task_object_gate",
    "pgg_actor_critic_review_gate",
    "pgg_control_curriculum_eval_gate",
    "pgg_heartbeat_mapping_gate",
    "pgg_heartbeat_replay_ledger_gate",
    "pgg_heartbeat_light_runner",
    "pgg_heartbeat_alert_summarizer",
    "pgg_heartbeat_alert_delivery_gate",
    "pgg_heartbeat_evolution_planner",
    "pgg_heartbeat_plan_rotation_runner",
    "pgg_heartbeat_recommendation_candidate_gate",
    "pgg_heartbeat_candidate_prioritizer",
    "pgg_heartbeat_candidate_executor_preflight",
    "pgg_heartbeat_capability_gap_probe",
    "pgg_heartbeat_gap_action_router",
    "pgg_health_monitor_light_runner",
    "pgg_token_cost_governance_status",
    "pgg_neuron_autoevolve_guard",
]
