[package]
name = "hermes_pgg_apex_dynamic_score"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermes_pgg_apex_dynamic_score"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["abi3-py311"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"