[package]
name = "hermes_pgg_archon_utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermes_pgg_archon_utils"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["abi3-py311"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
