[package]
name = "hermes_pgg_codegenesis_scanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermes_pgg_codegenesis_scanner"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["abi3-py311"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
strip = "symbols"
lto = true