[package]
name = "hermes-pgg-evomaster-gate"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermes_pgg_evomaster_gate"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["abi3-py311"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
