[package]
name = "hermes-pgg-overlay"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermes_pgg_overlay"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["abi3-py311"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.6"
