[package]
name = "hermes-pgg-pilotdeck"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermes_pgg_pilotdeck"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["abi3-py311"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
proptest = "1.6"
