[package]
name = "hermes_pgg_security_policy_surface"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermes_pgg_security_policy_surface"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["abi3-py311"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
strip = "symbols"
lto = true