[package]
name = "hermes_pgg_super_agi_formula"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermes_pgg_super_agi_formula"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["abi3-py311"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
