[package]
name = "pgg_control_curriculum_eval_gate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pgg_control_curriculum_eval_gate"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
