[package]
name = "pgg_feishu_learning_batch_gate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pgg_feishu_learning_batch_gate"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
