[package]
name = "pgg_fusion_session_consumer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pgg-fusion-session-consumer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
