[package]
name = "pgg_provider_health_check"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pgg_provider_health_check"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
ureq = { version = "3", features = ["native-tls"] }