[package]
name = "pgg_sourceref_repair_runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pgg-sourceref-repair-runner-rs"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
